--- a/Div Layout Stuff/Div rows/div_rows.html
+++ b/Div Layout Stuff/Div rows/div_rows.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rows</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,8 +17,5 @@
             <div class="divRed" id="div3">3</div>
         </div>
     </div>
-    
-    
-
 </body>
 </html>
