--- a/Me/contact.html
+++ b/Me/contact.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav id="navbar">
+        <ul class="navigation">
+            <li><a href="bio.html">Bio</a></li>
+            <li><a href="contact.html">Contact info</a></li>
+            <li><a href="cookieRecipe.html">My cookie recipe</a></li>
+            <li><a href="favThings.html">Favourite things</a></li>
+        </ul>
+    </nav>
+
     <h1>Will's contact info</h1>
     <p>Email: <a href="williambest133@gmail.com">williambest133@gmail.com</a></p>
     <p>Phone number: 07468 521898</p>
