--- a/Me/cookieRecipe.html
+++ b/Me/cookieRecipe.html
@@ -8,6 +8,14 @@
 </head>
 
 <body>
+    <nav id="navbar">
+        <ul class="navigation">
+            <li><a href="bio.html">Bio</a></li>
+            <li><a href="contact.html">Contact info</a></li>
+            <li><a href="cookieRecipe.html">My cookie recipe</a></li>
+            <li><a href="favThings.html">Favourite things</a></li>
+        </ul>
+    </nav>
     <h1>How to make cookies</h1>
     <img src="images/cookies.jpg" alt="A tray of cookies" id="cookies">
 
